fix title alignment

--- a/src/components/common.css
+++ b/src/components/common.css
@@ -20,9 +20,14 @@ header {
 
 .header-title {
   flex: 1;
-  margin: 0;
-  text-align: center;
+  display: flex;
+  justify-content: center;
   height: 2rem;
+}
+
+.header-title h1 {
+  margin: 0;
+  line-height: 2rem;
 }
 
 main {
